progress?: -bomb placement works (client->request->place or server->place, it works for ai as well) -client_entity_kill works now -UUIDs hurray, -> every NetworkPlayer has one extra, when they spawn, the GameObject<->NetworkPlayer uuid synchronizes. ISSUES: -player death crashes the game -> concurrent modification exception (engine bug probs) -KICK FUNCTION -> it hasn't been implemented - i tried and there is a little rant about it in the Entity.java file, right in the middle of the move() function. -the game can still crash after leaving a match (player disconnect isn't the smoothest i guess)